setup-scripts/71-jupyterhub/jupyter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  namespace: spark
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: jupyter
spec:
  ingressClassName: nginx
  tls:
    - secretName: jupyter-ssl
      hosts:
      - jupyter.vps-2.cluster-4.de
  rules:
  - host: "jupyter.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: proxy-public
              port:
                number: 80
