setup-scripts/71-jupyterhub/jupyterhub-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: spark
  name: jupyter-vs
  labels:
    app: jupyter
spec:
  gateways:
  - istio-system/vps2-gateway
  hosts:
  - 'jupyter.vps2.cluster-1.de'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jupyter-svc.spark.svc.cluster.local
        port:
          number: 80
